Some random change

--- a/css/main.css
+++ b/css/main.css
@@ -807,6 +807,9 @@ ul.sub-menu {
 .person-thumb img {
 }
 
+.list-inline li{
+  display: inline !important;
+}
 
 .social-profile {
   background: none repeat scroll 0 0 rgba(137, 97, 46, 0.8);
